{
  "version": 4,
  "terraform_version": "1.5.5",
  "serial": 78,
  "lineage": "69a5a0f3-ff5d-deb6-887a-d18d9bbcf343",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rds_db_ingress_workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow worker nodes to communicate with RDS database",
            "from_port": 5432,
            "id": "sgrule-4201633415",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02ea47c660ff72c62",
            "security_group_rule_id": "sgr-067e2da86ea27ce06",
            "self": false,
            "source_security_group_id": "sg-04ba378b8a5dc1c9a",
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.network.aws_security_group.rds_db_sg",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:611316314659:security-group/sg-04ba378b8a5dc1c9a",
            "description": "EKS cluster security group.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow cluster egress access to the Internet.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04ba378b8a5dc1c9a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow pods to communicate with the EKS cluster API.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09d7d044a9361779f"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "mukta-prod2023051609550318260000001e",
            "name_prefix": "mukta-prod",
            "owner_id": "611316314659",
            "revoke_rules_on_delete": false,
            "tags": {
              "KubernetesCluster": "mukta-prod",
              "Name": "mukta-prod-eks_cluster_sg",
              "kubernetes.io/cluster/mukta-prod": "owned"
            },
            "tags_all": {
              "KubernetesCluster": "mukta-prod",
              "Name": "mukta-prod-eks_cluster_sg",
              "kubernetes.io/cluster/mukta-prod": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-056c212de6b11b990"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:611316314659:security-group/sg-09d7d044a9361779f",
            "description": "Security group for all nodes in the cluster.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow nodes all egress to the Internet.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09d7d044a9361779f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow node to communicate with each other.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04ba378b8a5dc1c9a"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow workers pods to receive communication from the cluster control plane.",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04ba378b8a5dc1c9a"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "mukta-prod2023051609550400650000001f",
            "name_prefix": "mukta-prod",
            "owner_id": "611316314659",
            "revoke_rules_on_delete": false,
            "tags": {
              "KubernetesCluster": "mukta-prod",
              "Name": "mukta-prod-eks_worker_sg",
              "kubernetes.io/cluster/mukta-prod": "owned"
            },
            "tags_all": {
              "KubernetesCluster": "mukta-prod",
              "Name": "mukta-prod-eks_worker_sg",
              "kubernetes.io/cluster/mukta-prod": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-056c212de6b11b990"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-1368539159",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-04ba378b8a5dc1c9a",
            "security_group_rule_id": "sgr-033d2f496fc796b82",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-3416397279",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04ba378b8a5dc1c9a",
            "security_group_rule_id": "sgr-0b7d88c97dc7fee62",
            "self": false,
            "source_security_group_id": "sg-09d7d044a9361779f",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes all egress to the Internet.",
            "from_port": 0,
            "id": "sgrule-132835045",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-09d7d044a9361779f",
            "security_group_rule_id": "sgr-0fbb84e22cc7ac565",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.workers",
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow workers pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-3443600673",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09d7d044a9361779f",
            "security_group_rule_id": "sgr-078880e154bdcd6ac",
            "self": false,
            "source_security_group_id": "sg-04ba378b8a5dc1c9a",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-317233262",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09d7d044a9361779f",
            "security_group_rule_id": "sgr-00f687affadfa264b",
            "self": false,
            "source_security_group_id": "sg-04ba378b8a5dc1c9a",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow node to communicate with each other.",
            "from_port": 0,
            "id": "sgrule-3823759074",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-09d7d044a9361779f",
            "security_group_rule_id": "sgr-0c78e30b6832c67c7",
            "self": false,
            "source_security_group_id": "sg-09d7d044a9361779f",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.workers",
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06e2932bb5e0a516a",
            "association_id": "eipassoc-0f6b74a19ae572df1",
            "domain": "vpc",
            "id": "eipalloc-06e2932bb5e0a516a",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0a414c059112e2a25",
            "private_dns": "ip-192-168-1-145.ap-south-1.compute.internal",
            "private_ip": "192.168.1.145",
            "public_dns": "ec2-43-205-37-246.ap-south-1.compute.amazonaws.com",
            "public_ip": "43.205.37.246",
            "public_ipv4_pool": "amazon",
            "tags": {
              "KubernetesCluster": "mukta-prod",
              "Name": "eip-mukta-prod",
              "kubernetes.io/cluster/mukta-prod": "shared"
            },
            "tags_all": {
              "KubernetesCluster": "mukta-prod",
              "Name": "eip-mukta-prod",
              "kubernetes.io/cluster/mukta-prod": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "module.network.aws_internet_gateway.internet_gateway",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:611316314659:internet-gateway/igw-051b2a80a555a002d",
            "id": "igw-051b2a80a555a002d",
            "owner_id": "611316314659",
            "tags": {
              "KubernetesCluster": "mukta-prod",
              "Name": "mukta-prod",
              "kubernetes.io/cluster/mukta-prod": "shared"
            },
            "tags_all": {
              "KubernetesCluster": "mukta-prod",
              "Name": "mukta-prod",
              "kubernetes.io/cluster/mukta-prod": "shared"
            },
            "vpc_id": "vpc-056c212de6b11b990"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06e2932bb5e0a516a",
            "association_id": "eipassoc-0f6b74a19ae572df1",
            "connectivity_type": "public",
            "id": "nat-073610bb24f007001",
            "network_interface_id": "eni-0a414c059112e2a25",
            "private_ip": "192.168.1.145",
            "public_ip": "43.205.37.246",
            "subnet_id": "subnet-0616bba7f62d0efcc",
            "tags": {
              "KubernetesCluster": "mukta-prod",
              "Name": "nat-gw-mukta-prod",
              "kubernetes.io/cluster/mukta-prod": "shared"
            },
            "tags_all": {
              "KubernetesCluster": "mukta-prod",
              "Name": "nat-gw-mukta-prod",
              "kubernetes.io/cluster/mukta-prod": "shared"
            }
          },
          "dependencies": [
            "module.network.aws_eip.eip",
            "module.network.aws_internet_gateway.internet_gateway",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:611316314659:route-table/rtb-0c12a6ca5887c0c32",
            "id": "rtb-0c12a6ca5887c0c32",
            "owner_id": "611316314659",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-073610bb24f007001",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "KubernetesCluster": "mukta-prod",
              "Name": "private-mukta-prod-rtb",
              "kubernetes.io/cluster/mukta-prod": "shared"
            },
            "tags_all": {
              "KubernetesCluster": "mukta-prod",
              "Name": "private-mukta-prod-rtb",
              "kubernetes.io/cluster/mukta-prod": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-056c212de6b11b990"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.eip",
            "module.network.aws_internet_gateway.internet_gateway",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:611316314659:route-table/rtb-0bd341e850ed260b1",
            "id": "rtb-0bd341e850ed260b1",
            "owner_id": "611316314659",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-051b2a80a555a002d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "KubernetesCluster": "mukta-prod",
              "Name": "public-mukta-prod-rtb",
              "kubernetes.io/cluster/mukta-prod": "shared"
            },
            "tags_all": {
              "KubernetesCluster": "mukta-prod",
              "Name": "public-mukta-prod-rtb",
              "kubernetes.io/cluster/mukta-prod": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-056c212de6b11b990"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.internet_gateway",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c5185bc5bd05a8ff",
            "route_table_id": "rtb-0c12a6ca5887c0c32",
            "subnet_id": "subnet-0d7a256db7af02bc4"
          },
          "dependencies": [
            "module.network.aws_eip.eip",
            "module.network.aws_internet_gateway.internet_gateway",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private_route_table",
            "module.network.aws_subnet.private_subnet",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cc9f4101d48dca55",
            "route_table_id": "rtb-0c12a6ca5887c0c32",
            "subnet_id": "subnet-09f84e5c8a3444a51"
          },
          "dependencies": [
            "module.network.aws_eip.eip",
            "module.network.aws_internet_gateway.internet_gateway",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private_route_table",
            "module.network.aws_subnet.private_subnet",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-031e739032408f3af",
            "route_table_id": "rtb-0bd341e850ed260b1",
            "subnet_id": "subnet-0616bba7f62d0efcc"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.internet_gateway",
            "module.network.aws_route_table.public_route_table",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04f3217c45bb4e24f",
            "route_table_id": "rtb-0bd341e850ed260b1",
            "subnet_id": "subnet-09ed2b055f1b1e1cd"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.internet_gateway",
            "module.network.aws_route_table.public_route_table",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "master_nodes_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:611316314659:security-group/sg-0e92895329dace2a1",
            "description": "Master nodes security group",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "Allow outbound traffic to worker nodes",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a76530bbf13b6c5d"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0e92895329dace2a1",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow worker nodes to communicate with cluster API server",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a76530bbf13b6c5d"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "masters-mukta-prod",
            "name_prefix": "",
            "owner_id": "611316314659",
            "revoke_rules_on_delete": false,
            "tags": {
              "KubernetesCluster": "mukta-prod",
              "Name": "masters-mukta-prod",
              "kubernetes.io/cluster/mukta-prod": "shared"
            },
            "tags_all": {
              "KubernetesCluster": "mukta-prod",
              "Name": "masters-mukta-prod",
              "kubernetes.io/cluster/mukta-prod": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-056c212de6b11b990"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:611316314659:security-group/sg-02ea47c660ff72c62",
            "description": "RDS Database security group",
            "egress": [],
            "id": "sg-02ea47c660ff72c62",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow worker nodes to communicate with RDS database",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04ba378b8a5dc1c9a",
                  "sg-0a76530bbf13b6c5d"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "db-mukta-prod",
            "name_prefix": "",
            "owner_id": "611316314659",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "db-mukta-prod"
            },
            "tags_all": {
              "Name": "db-mukta-prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-056c212de6b11b990"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_nodes_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:611316314659:security-group/sg-0a76530bbf13b6c5d",
            "description": "Security group for all worker nodes in the cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a76530bbf13b6c5d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow node to communicate with each other",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow worker Kubelets and pods to receive communication from the cluster control plane",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e92895329dace2a1"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "nodes-mukta-prod",
            "name_prefix": "",
            "owner_id": "611316314659",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-056c212de6b11b990"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_nodes_egress_workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow outbound traffic to worker nodes",
            "from_port": 10250,
            "id": "sgrule-427857603",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e92895329dace2a1",
            "security_group_rule_id": "sgr-0791ff978a0d5f52f",
            "self": false,
            "source_security_group_id": "sg-0a76530bbf13b6c5d",
            "timeouts": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.master_nodes_sg",
            "module.network.aws_security_group.worker_nodes_sg",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_nodes_ingress_workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow worker nodes to communicate with cluster API server",
            "from_port": 443,
            "id": "sgrule-1913259515",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e92895329dace2a1",
            "security_group_rule_id": "sgr-07ba86bd5820a5a25",
            "self": false,
            "source_security_group_id": "sg-0a76530bbf13b6c5d",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.master_nodes_sg",
            "module.network.aws_security_group.worker_nodes_sg",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rds_db_ingress_workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow worker nodes to communicate with RDS database",
            "from_port": 5432,
            "id": "sgrule-3982115037",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02ea47c660ff72c62",
            "security_group_rule_id": "sgr-0629fc2f9edf4eed2",
            "self": false,
            "source_security_group_id": "sg-0a76530bbf13b6c5d",
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.rds_db_sg",
            "module.network.aws_security_group.worker_nodes_sg",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_nodes_ingress_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow worker Kubelets and pods to receive communication from the cluster control plane",
            "from_port": 1025,
            "id": "sgrule-1217982472",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a76530bbf13b6c5d",
            "security_group_rule_id": "sgr-0fd3cac3bdb2a4ea4",
            "self": false,
            "source_security_group_id": "sg-0e92895329dace2a1",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.master_nodes_sg",
            "module.network.aws_security_group.worker_nodes_sg",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_nodes_ingress_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow node to communicate with each other",
            "from_port": 0,
            "id": "sgrule-900472692",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0a76530bbf13b6c5d",
            "security_group_rule_id": "sgr-04ad08c8a4df18719",
            "self": false,
            "source_security_group_id": "sg-0a76530bbf13b6c5d",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.worker_nodes_sg",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:611316314659:subnet/subnet-0d7a256db7af02bc4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.64.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d7a256db7af02bc4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "611316314659",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "KubernetesCluster": "mukta-prod",
              "Name": "ap-south-1b-mukta-prod",
              "SubnetType": "Private",
              "kubernetes.io/cluster/mukta-prod": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "KubernetesCluster": "mukta-prod",
              "Name": "ap-south-1b-mukta-prod",
              "SubnetType": "Private",
              "kubernetes.io/cluster/mukta-prod": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-056c212de6b11b990"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:611316314659:subnet/subnet-09f84e5c8a3444a51",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.96.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09f84e5c8a3444a51",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "611316314659",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "KubernetesCluster": "mukta-prod",
              "Name": "ap-south-1a-mukta-prod",
              "SubnetType": "Private",
              "kubernetes.io/cluster/mukta-prod": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "KubernetesCluster": "mukta-prod",
              "Name": "ap-south-1a-mukta-prod",
              "SubnetType": "Private",
              "kubernetes.io/cluster/mukta-prod": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-056c212de6b11b990"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:611316314659:subnet/subnet-0616bba7f62d0efcc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.0.0/21",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0616bba7f62d0efcc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "611316314659",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "KubernetesCluster": "mukta-prod",
              "Name": "utility-ap-south-1b-mukta-prod",
              "SubnetType": "Utility",
              "kubernetes.io/cluster/mukta-prod": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "KubernetesCluster": "mukta-prod",
              "Name": "utility-ap-south-1b-mukta-prod",
              "SubnetType": "Utility",
              "kubernetes.io/cluster/mukta-prod": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-056c212de6b11b990"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:611316314659:subnet/subnet-09ed2b055f1b1e1cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.8.0/21",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09ed2b055f1b1e1cd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "611316314659",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "KubernetesCluster": "mukta-prod",
              "Name": "utility-ap-south-1a-mukta-prod",
              "SubnetType": "Utility",
              "kubernetes.io/cluster/mukta-prod": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "KubernetesCluster": "mukta-prod",
              "Name": "utility-ap-south-1a-mukta-prod",
              "SubnetType": "Utility",
              "kubernetes.io/cluster/mukta-prod": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-056c212de6b11b990"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:611316314659:vpc/vpc-056c212de6b11b990",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-016452f6f0a16f6a8",
            "default_route_table_id": "rtb-06242a9504eb5a83b",
            "default_security_group_id": "sg-0bc87e733d7d7f3da",
            "dhcp_options_id": "dopt-0c2645b43ce7760bf",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-056c212de6b11b990",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06242a9504eb5a83b",
            "owner_id": "611316314659",
            "tags": {
              "Name": "mukta-prod",
              "kubernetes.io/cluster/mukta-prod": "shared"
            },
            "tags_all": {
              "Name": "mukta-prod",
              "kubernetes.io/cluster/mukta-prod": "shared"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}